--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
     padding: 20px 60px;
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
+}
+
+* {
+    box-sizing: border-box;
 }
